WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
276470
[Writing Tools] Writing Tools do not appear in Safari
https://bugs.webkit.org/show_bug.cgi?id=276470
Summary
[Writing Tools] Writing Tools do not appear in Safari
Richard Robinson
Reported
2024-07-10 21:33:58 PDT
rdar://131501232
Attachments
Add attachment
proposed patch, testcase, etc.
Richard Robinson
Comment 1
2024-07-10 21:44:16 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/30680
EWS
Comment 2
2024-07-11 07:53:45 PDT
Committed
280860@main
(c6f1d258f360): <
https://commits.webkit.org/280860@main
> Reviewed commits have been landed. Closing PR #30680 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug