[Writing Tools] Writing Tools do not appear in Safari https://bugs.webkit.org/show_bug.cgi?id=276470 rdar://131501232

Reviewed by Aditya Keerthi.

The new implementation of the Writing Tools context menu item depends on the editor state having
post-layout data. However, this is not the case in Safari due to `shouldAvoidComputingPostLayoutDataForEditorState`
returning `true`.

Fix by ensuring that post-layout data is always available in this case by making `shouldAvoidComputingPostLayoutDataForEditorState`
return `false` if a context menu has ever been shown.

* Source/WebKit/UIProcess/mac/WebPageProxyMac.mm:
(WebKit::WebPageProxy::handleContextMenuWritingTools):
* Source/WebKit/WebProcess/WebPage/WebContextMenu.cpp:
(WebKit::WebContextMenu::show):
* Source/WebKit/WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::showContextMenuFromFrame):
* Source/WebKit/WebProcess/WebPage/WebPage.h:
* Source/WebKit/WebProcess/WebPage/mac/WebPageMac.mm:
(WebKit::WebPage::shouldAvoidComputingPostLayoutDataForEditorState const):

Canonical link: https://commits.webkit.org/280860@main